<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.cjpapps.gumsski.StartActivity">
    <item
        android:id="@+id/help"
        android:orderInCategory="1"
        android:title="@string/help"
        android:icon="@drawable/ic_action_help_svg"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/new_user"
        android:orderInCategory="10"
        android:title="@string/new_user"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>