<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:id="@+id/affiche"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:id="@+id/organisateur"
        android:textSize="15sp"
        android:text="@string/organisateur"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/affiche" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/affiche2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/organisateur" />

    <ImageButton
        android:id="@+id/phone_rescar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/phone_vert_rond_36"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/email_rescar"
        app:layout_constraintTop_toBottomOf="@id/affiche2"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:contentDescription="@string/email" />

    <ImageButton
        android:id="@+id/email_rescar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/mail_bleu_rond_36"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintStart_toEndOf="@id/phone_rescar"
        app:layout_constraintEnd_toStartOf="@id/sms_rescar"
        app:layout_constraintTop_toTopOf="@id/phone_rescar"
        android:contentDescription="@string/phone" />

    <ImageButton
        android:id="@+id/sms_rescar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/message_jaune_rond_36"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintStart_toEndOf="@id/email_rescar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/email_rescar"
        android:contentDescription="@string/message" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="5dp"
        android:id="@+id/liste_groupes"
        android:textSize="15sp"
        android:text="@string/liste_groupes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/affiche2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:id="@+id/panique"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_rescar" />

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- A RecyclerView with some commonly used attributes -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listechoix"
        android:scrollbars="vertical"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liste_groupes"/>


 <!--   <Button
        android:id="@+id/button"

        android:text="Clic !"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/affiche" />  -->

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
